--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -14,8 +14,8 @@ jobs:
 
     steps:
     - name: Pull Docker image
-      run: sudo docker pull varsubham/cicd-pipeline:latest
+      run: sudo docker pull monu1/cicd-pipeline:latest
     - name: Delete Old docker container
       run: sudo docker rm -f cicd-pipeline-container || true
     - name: Run Docker Container
-      run: sudo docker run -d -p 8080:8080 --name cicd-pipeline-container varsubham/cicd-pipeline
+      run: sudo docker run -d -p 8080:8080 --name cicd-pipeline-container monu1/cicd-pipeline
